fix the horizontal alignment with some padding so that even in mobile the cards are displayed nicely

--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,3 @@
-/* * {
-  outline: 1px solid orange;
-} */
-
 /* css for carousel */
 
 .carousel-item {
