--- a/styles/theme.css
+++ b/styles/theme.css
@@ -1,3 +1,7 @@
+/* * {
+  outline: 1px solid orange;
+} */
+
 body {
     font-family: 'Montserrat';
 }
